--- a/style.css
+++ b/style.css
@@ -1,46 +1,108 @@
-body{
-margin: 0;
-padding: 0;
-font-family: Verdana, Geneva, Tahoma, sans-serif ;
-background-color: black;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: black;
 }
-
+/* HEADER */
 
 .titulo {
-color: #32b9cd;
-width: fit-content;
-font-weight: 500;
-
+    color: #32b9cd;
+    width: fit-content;
+    font-weight: 500;
 }
 
 .navbar {
-width: 300;
-color: #e3b062;
-list-style: none;
-display: flex;
-justify-content: space-between;
-align-items: center;
-
+    width: 300px;
+    color: #e3b062;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-
-
-.header{
-border-bottom: 3px solid #32b9cd;
-
-
+.navbar a{
+    color: #e3b062;
+    text-decoration: none;
 }
 
+.navbar a:hover {
+    color: #32b9cd
+}
+
+.header {
+    border-bottom: 3px solid #32b9cd;
+}
 
 .container {
-
-width: 80%;
-margin: auto;
-display: flex;
-
+    width: 80%;
+    margin: auto;
+    display: flex;
 }
 
 .header .container {
-justify-content: space-between;
+    justify-content: space-between;
+} 
+
+/* Banner */
+
+.banner{
+    background-image: url("./assets/bg-jelly-fish-para_outras_pags.png");
+    height: 500px;;
+    color:white
+}
+
+.banner .container {
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.banner .container p {
+    font-size : 32px;
+    width: 200px; 
+}
+
+/* SOCIAL */
+
+.social {
+    background-color: #f7f7f7;
+    height: 500px;
 
 }
+
+.social .container {
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.social .container .box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.social .container .box img {
+    width: 100px;
+}
+
+.social .container .box p {
+    width: 400px;
+}
+
+/* FOOTER */
+
+.footer {
+    background-color: #32b9cd;
+    color: white;
+}
+
+.footer .container {
+    justify-content: center;
+    text-align: center;
+}
+
+
